--- a/index.html
+++ b/index.html
@@ -20,15 +20,7 @@
             padding-bottom: 90px;
         }
 
-        /* Красная шапка */
-        .header-red {
-            background-color: var(--kaspi-red);
-            height: 50px;
-            display: flex;
-            align-items: center;
-            padding: 0 15px;
-        }
-
+        /* Поиск */
         .search-container {
             background-color: white;
             padding: 10px 15px;
@@ -44,7 +36,7 @@
             align-items: center;
         }
 
-        /* Сетка сервисов БЕЗ фонов */
+        /* Сетка сервисов */
         .services-grid {
             display: grid;
             grid-template-columns: repeat(4, 1fr);
@@ -61,7 +53,7 @@
         }
 
         .icon-wrapper {
-            height: 42px; /* Увеличили зону иконки */
+            height: 42px;
             width: 42px;
             display: flex;
             align-items: center;
@@ -69,16 +61,19 @@
             margin-bottom: 8px;
         }
 
+        /* Стилизация иконок для "жирности" */
         .service-icon {
-            width: 42px; /* Иконка крупнее */
+            width: 42px;
             height: 42px;
             object-fit: contain;
+            /* Фильтр накладывает микро-тень, расширяя контуры картинки */
+            filter: drop-shadow(0.6px 0 0px #333) drop-shadow(-0.6px 0 0px #333) contrast(1.1);
         }
 
         .service-name {
             font-size: 12px;
-            font-weight: 400;
-            color: #333;
+            font-weight: 600; /* Делаем текст жирнее */
+            color: #222;
         }
 
         /* Блок Magnum */
@@ -91,15 +86,15 @@
             gap: 12px;
             border-bottom: 1px solid #eee;
         }
-        .magnum-img { width: 45px; height: 45px; border-radius: 50%; }
 
-        /* Секция товаров */
+        /* Заголовок секций */
         .section-title {
             padding: 15px;
             font-weight: bold;
             font-size: 18px;
         }
 
+        /* Скролл товаров */
         .products-scroll {
             display: flex;
             overflow-x: auto;
@@ -112,9 +107,8 @@
             border-radius: 12px;
             padding: 10px;
         }
-        .product-img { width: 100%; height: 100px; object-fit: contain; }
 
-        /* Таббар */
+        /* Нижнее меню */
         .tab-bar {
             position: fixed;
             bottom: 0;
@@ -133,7 +127,10 @@
             font-size: 11px;
             color: #8e8e93;
         }
-        .tab-item.active { color: var(--kaspi-red); }
+        .tab-item.active { 
+            color: var(--kaspi-red); 
+            font-weight: bold;
+        }
     </style>
 </head>
 <body>
@@ -190,11 +187,11 @@
 <div class="products-scroll">
     <div class="product-card">
         <div style="background:#eee; height:100px; border-radius:8px;"></div>
-        <div style="font-size:12px; margin-top:5px;">Товар 1</div>
+        <div style="font-size:12px; margin-top:5px; font-weight: 500;">Товар 1</div>
     </div>
     <div class="product-card">
         <div style="background:#eee; height:100px; border-radius:8px;"></div>
-        <div style="font-size:12px; margin-top:5px;">Товар 2</div>
+        <div style="font-size:12px; margin-top:5px; font-weight: 500;">Товар 2</div>
     </div>
 </div>
 
@@ -212,4 +209,3 @@
 
 </body>
 </html>
-
