--- a/index.html
+++ b/index.html
@@ -9,22 +9,25 @@
         :root {
             --kaspi-red: #f14635;
             --bg-color: #f2f2f5;
+            --text-dark: #222222;
         }
 
         body {
             background-color: var(--bg-color);
             margin: 0;
             padding: 0;
-            font-family: -apple-system, system-ui, sans-serif;
-            color: #333;
+            /* Используем максимально близкие к оригиналу шрифты */
+            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+            color: var(--text-dark);
             padding-bottom: 90px;
+            -webkit-font-smoothing: antialiased;
         }
 
         /* Поиск */
         .search-container {
             background-color: white;
             padding: 10px 15px;
-            border-bottom: 1px solid #eee;
+            border-bottom: 1px solid #e5e5e5;
         }
         .search-bar {
             background-color: #f0f0f2;
@@ -41,8 +44,8 @@
             display: grid;
             grid-template-columns: repeat(4, 1fr);
             background: white;
-            padding: 25px 5px;
-            gap: 25px 0;
+            padding: 20px 5px;
+            gap: 20px 0;
         }
 
         .service-item {
@@ -53,27 +56,28 @@
         }
 
         .icon-wrapper {
-            height: 42px;
-            width: 42px;
+            height: 44px;
+            width: 44px;
             display: flex;
             align-items: center;
             justify-content: center;
-            margin-bottom: 8px;
+            margin-bottom: 6px;
         }
 
-        /* Стилизация иконок для "жирности" */
         .service-icon {
-            width: 42px;
-            height: 42px;
+            width: 40px;
+            height: 40px;
             object-fit: contain;
-            /* Фильтр накладывает микро-тень, расширяя контуры картинки */
-            filter: drop-shadow(0.6px 0 0px #333) drop-shadow(-0.6px 0 0px #333) contrast(1.1);
+            /* Улучшенная имитация жирного начертания для PNG */
+            filter: drop-shadow(0.4px 0 0px #333) drop-shadow(-0.4px 0 0px #333) contrast(1.1) brightness(0.9);
+            transform: scale(1.05); /* Легкое увеличение для массивности */
         }
 
         .service-name {
-            font-size: 12px;
-            font-weight: 600; /* Делаем текст жирнее */
-            color: #222;
+            font-size: 11.5px;
+            font-weight: 600; /* Плотный шрифт */
+            color: var(--text-dark);
+            letter-spacing: -0.2px;
         }
 
         /* Блок Magnum */
@@ -84,14 +88,14 @@
             display: flex;
             align-items: center;
             gap: 12px;
-            border-bottom: 1px solid #eee;
+            border-bottom: 1px solid #e5e5e5;
         }
 
-        /* Заголовок секций */
         .section-title {
-            padding: 15px;
-            font-weight: bold;
-            font-size: 18px;
+            padding: 18px 15px 10px;
+            font-weight: 800; /* Очень жирный заголовок */
+            font-size: 19px;
+            letter-spacing: -0.5px;
         }
 
         /* Скролл товаров */
@@ -100,12 +104,16 @@
             overflow-x: auto;
             padding: 0 15px;
             gap: 12px;
+            scrollbar-width: none; /* Скрываем скроллбар */
         }
+        .products-scroll::-webkit-scrollbar { display: none; }
+
         .product-card {
-            min-width: 140px;
+            min-width: 150px;
             background: white;
             border-radius: 12px;
-            padding: 10px;
+            padding: 12px;
+            box-shadow: 0 1px 3px rgba(0,0,0,0.05);
         }
 
         /* Нижнее меню */
@@ -116,20 +124,25 @@
             background: white;
             display: grid;
             grid-template-columns: repeat(4, 1fr);
-            padding: 10px 0;
-            border-top: 1px solid #eee;
-            box-shadow: 0 -2px 10px rgba(0,0,0,0.05);
+            padding: 8px 0;
+            border-top: 1px solid #e5e5e5;
+            box-shadow: 0 -1px 10px rgba(0,0,0,0.03);
+            z-index: 100;
         }
         .tab-item {
             display: flex;
             flex-direction: column;
             align-items: center;
-            font-size: 11px;
+            font-size: 10px;
             color: #8e8e93;
+            gap: 4px;
         }
         .tab-item.active { 
             color: var(--kaspi-red); 
-            font-weight: bold;
+            font-weight: 700;
+        }
+        .tab-icon {
+            font-size: 20px;
         }
     </style>
 </head>
@@ -175,40 +188,40 @@
 </div>
 
 <div class="magnum-row">
-    <div style="background: #e11c2a; color:white; width:45px; height:45px; border-radius:50%; display:flex; align-items:center; justify-content:center; font-weight:bold;">M</div>
+    <div style="background: #e11c2a; color:white; width:45px; height:45px; border-radius:50%; display:flex; align-items:center; justify-content:center; font-weight:900; font-size: 22px;">M</div>
     <div style="flex:1">
-        <div style="font-weight:bold;">Magnum</div>
-        <div style="color:gray; font-size:12px;">Продукты питания с доставкой</div>
+        <div style="font-weight:700; font-size: 16px;">Magnum</div>
+        <div style="color:#8e8e93; font-size:13px;">Продукты питания с доставкой</div>
     </div>
-    <div style="color:#ccc">❯</div>
+    <div style="color:#ccc; font-size: 18px;">❯</div>
 </div>
 
 <div class="section-title">Вы недавно смотрели</div>
 <div class="products-scroll">
     <div class="product-card">
-        <div style="background:#eee; height:100px; border-radius:8px;"></div>
-        <div style="font-size:12px; margin-top:5px; font-weight: 500;">Товар 1</div>
+        <div style="background:#f8f8f8; height:110px; border-radius:8px; display:flex; align-items:center; justify-content:center; color:#ccc;">Фото</div>
+        <div style="font-size:13px; margin-top:8px; font-weight: 600;">Смартфон...</div>
+        <div style="font-size:14px; font-weight: 800; margin-top:4px;">450 000 ₸</div>
     </div>
     <div class="product-card">
-        <div style="background:#eee; height:100px; border-radius:8px;"></div>
-        <div style="font-size:12px; margin-top:5px; font-weight: 500;">Товар 2</div>
+        <div style="background:#f8f8f8; height:110px; border-radius:8px; display:flex; align-items:center; justify-content:center; color:#ccc;">Фото</div>
+        <div style="font-size:13px; margin-top:8px; font-weight: 600;">Наушники...</div>
+        <div style="font-size:14px; font-weight: 800; margin-top:4px;">95 000 ₸</div>
     </div>
 </div>
 
 <div class="tab-bar">
-    <div class="tab-item active">🏠<div>Главная</div></div>
-    <div class="tab-item">🔳<div>Kaspi QR</div></div>
-    <div class="tab-item">💬<div>Сообщения</div></div>
-    <div class="tab-item">☰<div>Сервисы</div></div>
+    <div class="tab-item active"><span class="tab-icon">🏠</span><div>Главная</div></div>
+    <div class="tab-item"><span class="tab-icon">🔳</span><div>Kaspi QR</div></div>
+    <div class="tab-item"><span class="tab-icon">💬</span><div>Сообщения</div></div>
+    <div class="tab-item"><span class="tab-icon">☰</span><div>Сервисы</div></div>
 </div>
 
 <script>
     const tg = window.Telegram.WebApp;
     tg.expand();
+    tg.ready();
 </script>
 
 </body>
 </html>
-
-
-
